# agents-extensions

./: README.md
octopusos-ext-websearch/: README.md  pyproject.toml
octopusos-ext-websearch/octopus_ext_websearch/: __init__.py  manifest.json  plugin.py
octopusos-ext-websearch/octopus_ext_websearch/policy/: block_signatures.json  ua_pool.json
octopusos-ext-websearch/octopus_ext_websearch/providers/: bing_rss.py  duckduckgo.py  google.py  html_search_client.py
